--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
+<app-header></app-header>
+
+<router-outlet> </router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<!-- <div>
+  <label> select color</label>
+  <input type="color" id="colorPicker" #colorInput />
+</div>
+
+<div class="color-box" [style.backgroundColor]="selectedColor">
+  <h1>app component</h1>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+    dolore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+    sequi.
+  </p>
+</div> -->
+
+<!-- <div>
+  <h1>;;</h1>
+  <app-test [data]="courses"></app-test>
+  <button (click)="changeMs()">change msg</button>
+</div> -->
+
+<!-- <app-test (myEvent)="receiveEvent($event)"></app-test>
+
+<h1>{{ message }}</h1> -->
+<!-- <h1>test</h1>
+
+<button (click)="updateValue()">update value</button>
+
+<app-test [inputValue]="inputValue"></app-test> -->
+
 <!-- <h1>portfolio</h1>
 
 <ng-container *ngIf="!submitted; else preview">
