--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,14 @@
-<p>test works!</p>
+<!-- <p>test works!</p>
+<h1>prev value: {{ previousVal }}</h1>
+<h1>curr value: {{ currentVal }}</h1> -->
 
-<p type="submit" (mouseover)="display('kakaka')">test btn</p>
+<!-- <p type="submit" (mouseover)="display('kakaka')">test btn</p> -->
+<!-- <div>
+  {{ data | json }}
+
+  <div>
+    <h1 *ngFor="let item of data">{{ item.id }} === {{ item.name }}</h1>
+  </div>
+</div> -->
+
+<button (click)="emitEvent()">click me</button>
