--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
-
+html,
 body {
-  padding: 20px;
-  background-color: aliceblue;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+body {
+  font-weight: 300;
+}
+header {
+  width: 100%;
 }
 
-.lightMode {
-  background-color: antiquewhite;
-  color: black;
-}
-.darkMode {
-  background-color: rgb(0, 0, 0);
+nav {
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 0;
+  line-height: 60px;
+  min-height: 8vh;
+  align-items: center;
+  background-color: gray;
   color: white;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+
+nav ul {
+  line-height: 40px;
+  list-style: none;
+  background-color: black;
+  overflow: hidden;
+}
+nav ul li {
+  display: block;
+  padding: 10px 40px;
 }
