--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-
+<!-- 
+<h1>lalal</h1>
+<h1>{{ getAdmin.getData.name }}</h1> -->
 <router-outlet> </router-outlet>
 <!-- <router-outlet></router-outlet> -->
 <!-- <div>
