--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,21 +4,25 @@
       <li>
         <a routerLink="./home">home component</a>
       </li>
-      <li>
+      <!-- <li>
         <a routerLink="./about">about component</a>
       </li>
       <li>
         <a routerLink="./news">newscomponent</a>
       </li>
-      <!-- <li>
+      <li>
+        <a routerLink="/admin/user">admin </a>
+      </li> -->
+      <li>
+        <a routerLink="/admin/user2">admin </a>
+      </li>
+      <li>
         <a routerLink="./contact">contacts component</a>
       </li>
+      <li></li>
       <li>
-        <a routerLink="./services">servies component</a>
+        <a routerLink="./forms">forms component</a>
       </li>
-      <li>
-        <a routerLink="./home">home component</a>
-      </li> -->
     </ul>
   </nav>
 </header>
