--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,8 +1,13 @@
-<div>
-  <h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
-    quibusdam nemo ut veritatis, neque et eveniet perferendis ipsam. In dolores
-    porro quam eaque odio blanditiis. Sunt ipsa accusamus sequi dolor aliquam
-    vel!
-  </h1>
-</div>
+<ul>
+  <li *ngFor="let emp of employees">
+    employee : {{ emp.name }}
+    <button (click)="showDetails(emp.id)">show details</button>
+
+    <div *ngIf="emp.id === empId">
+      <p>id {{ emp.id }}</p>
+      <p>name----- {{ emp.name }}</p>
+      <p>aa--- {{ emp.location }}</p>
+      <p>cc</p>
+    </div>
+  </li>
+</ul>
