--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -1,26 +1,182 @@
-<!-- <form #myForm="ngForm" (ngSubmit)="submitForm(myForm)">
-  <div>
-    <label for="username">Name</label>
-    <input type="text" name="username" [(ngModel)]="user.username" required />
-  </div>
-  <button type="submit">Submit</button>
-</form> -->
+<div class="container">
+  <h1>Multi Step Form</h1>
+  <form [formGroup]="myForm" (ngSubmit)="formSubmit()" *ngIf="!isSubmitted">
+    <ng-container *ngIf="step == 1" formGroupName="userDetails">
+      <h4>User Details</h4>
+      <div class="mb-3">
+        <label for="inputName" class="form-label">Full Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="inputName"
+          formControlName="fname"
+        />
+        <p>pristine state {{ userDetails.get("fname")?.pristine }}</p>
+        <p>dirty state {{ userDetails.get("fname")?.dirty }}</p>
+        <span
+          class="form-label text-danger"
+          *ngIf="
+            userDetails.get('fname')?.invalid &&
+            userDetails.get('fname')?.touched
+          "
+          >*Please enter your full name</span
+        >
+      </div>
+      <div class="mb-3">
+        <label for="inputEmail" class="form-label">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="inputEmail"
+          formControlName="email"
+        />
+        <p class="form-label text-warning">
+          Dirty State - {{ userDetails.get("email")?.dirty }}
+        </p>
+        <p>dirty state {{ userDetails.get("email")?.dirty }}</p>
+        <span
+          class="form-label text-danger"
+          *ngIf="
+            userDetails.get('email')?.invalid &&
+            userDetails.get('email')?.touched
+          "
+          >*Please enter your email address</span
+        >
+      </div>
+      <div class="mb-3">
+        <label for="inputPassword" class="form-label">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="inputPassword"
+          formControlName="password"
+        />
+        <span
+          class="form-label text-danger"
+          *ngIf="
+            userDetails.get('password')?.invalid &&
+            userDetails.get('password')?.touched
+          "
+          >*Please enter your password</span
+        >
+      </div>
+    </ng-container>
 
-<div class="form-container">
-  <h1>form</h1>
-  <form #myForm="ngForm" (ngSubmit)="submitForm(myForm)">
-    <div class="inputbox">
-      <span>name</span>
-      <input type="text" name="name" ngModel required #name="ngModel" />
-    </div>
-    <div>
-      <span>email</span>
-      <input type="email" name="email" ngModel required #email="ngModel" />
-    </div>
-    <div>
-      <button type="submit">submit</button>
-      <button type="button" (click)="resetValue(myForm)">reset</button>
-      <button type="button" (click)="setDefault(myForm)">default</button>
-    </div>
+    <ng-container *ngIf="step == 2" formGroupName="additionalDetails">
+      <h4>Additional Details</h4>
+      <div class="mb-3">
+        <label for="inputMobile" class="form-label">Phone Number</label>
+        <input
+          type="number"
+          class="form-control"
+          id="inputMobile"
+          placeholder="+1"
+          formControlName="mobile"
+        />
+        <span
+          class="form-label text-danger"
+          *ngIf="
+            additionalDetails.get('mobile')?.invalid &&
+            additionalDetails.get('mobile')?.touched
+          "
+          >*Please enter 10-digit mobile number</span
+        >
+      </div>
+      <div class="mb-3">
+        <div class="form-floating">
+          <textarea
+            class="form-control"
+            placeholder="Enter Address"
+            id="floatingTextArea"
+            formControlName="address"
+          ></textarea>
+          <label for="floatingTextArea" class="form-label"
+            >Street Address</label
+          >
+          <span
+            class="form-label text-danger"
+            *ngIf="
+              additionalDetails.get('address')?.invalid &&
+              additionalDetails.get('address')?.touched
+            "
+            >*Please enter your address</span
+          >
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="inputCountry" class="form-label">Country</label>
+        <input
+          type="text"
+          class="form-control"
+          id="inputCountry"
+          formControlName="country"
+        />
+        <span
+          class="form-label text-danger"
+          *ngIf="
+            additionalDetails.get('country')?.invalid &&
+            additionalDetails.get('country')?.touched
+          "
+          >*Please specify your country</span
+        >
+      </div>
+      <div class="mb-3">
+        <label for="inputGender" class="form-label">Gender</label>
+        <select
+          name="inputGender"
+          id="inputGender"
+          class="form-control"
+          formControlName="gender"
+        >
+          <option value="" disabled selected>Select Gender</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="">Prefer not to answer</option>
+        </select>
+        <span
+          class="form-label text-danger"
+          *ngIf="
+            additionalDetails.get('gender')?.invalid &&
+            additionalDetails.get('gender')?.touched
+          "
+          >*Please select one option</span
+        >
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="step == 3" formGroupName="feedback">
+      <h4>Feedback/Comment</h4>
+      <div class="mb-3">
+        <div class="form-floating">
+          <textarea
+            class="form-control"
+            placeholder="Leave a comment here"
+            id="floatingTextArea"
+            style="height: 100px"
+            formControlName="comments"
+          ></textarea>
+          <label for="floatingTextArea" class="form-label">Comments</label>
+        </div>
+      </div>
+    </ng-container>
+
+    <button
+      type="button"
+      class="btn btn-primary"
+      (click)="btnPrevious()"
+      *ngIf="step != 1"
+    >
+      Previous
+    </button>
+    <button type="button" class="btn btn-primary mx-2" (click)="btnNext()">
+      Next
+    </button>
+    <button type="submit" class="btn btn-success" *ngIf="step == 3">
+      Submit
+    </button>
   </form>
+
+  <ng-container *ngIf="isSubmitted">
+    <h2 class="text-success mx-4">Form Submitted Successfully</h2>
+  </ng-container>
 </div>
