--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,12 @@
       <li>
         <a routerLink="./home">home component</a>
       </li>
+      <li>
+        <a routerLink="./async">async </a>
+      </li>
+      <!-- <li>
+        <a routerLink="./users">users</a>
+      </li> -->
       <!-- <li>
         <a routerLink="./about">about component</a>
       </li>
@@ -13,7 +19,7 @@
       <li>
         <a routerLink="/admin/user">admin </a>
       </li> -->
-      <li>
+      <!-- <li>
         <a routerLink="/admin/user2">admin </a>
       </li>
       <li>
@@ -22,7 +28,7 @@
       <li></li>
       <li>
         <a routerLink="./forms">forms component</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 </header>
