--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,4 +5,5 @@
   <label for="password">password</label>
   <input type="password" name="password" [(ngModel)]="password" />
   <button (click)="isLogin()">asdasdasd</button>
+  <app-users></app-users>
 </div>
