--- a/src/app/random1/random1.component.html
+++ b/src/app/random1/random1.component.html
@@ -1,3 +1,5 @@
-<p>random1 works!</p>
-<h1>ggggggggg</h1>
-<h1>{{ calculateCube() }}</h1>
+<h1 class="scale-up">
+  random compoennt Lorem ipsum dolor sit amet consectetur adipisicing elit.
+  Quasi, quae perspiciatis odit, ut vel ullam dolore consequatur, facere quidem
+  iusto.
+</h1>
