--- a/src/app/async/async.component.html
+++ b/src/app/async/async.component.html
@@ -1,5 +1,8 @@
 <div>
-  <p>h3ll0 W0rd</p>
+  <button (click)="postData()">CALL senddata```</button>
+  <button (click)="getData()">CALL getData ```</button>
+  <button (click)="putData()">CALL putData ```</button>
+  <button (click)="deteleData()">CALL deteleData ```</button>
 </div>
 
 <!-- <div>
