--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <a routerLink="./home">home component</a>
       </li>
       <li>
-        <a routerLink="./async">async </a>
+        <a routerLink="./products">crud </a>
       </li>
       <!-- <li>
         <a routerLink="./users">users</a>
