--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,12 @@
       <li>
         <a routerLink="./products">crud </a>
       </li>
+      <li>
+        <a routerLink="./signals">signals </a>
+      </li>
+      <li>
+        <a routerLink="./cart">cart </a>
+      </li>
       <!-- <li>
         <a routerLink="./users">users</a>
       </li> -->
