--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -3,5 +3,5 @@
   <input type="text" [(ngModel)]="name" placeholder="enter a name" />
 
   <hr />
-  <h1>{{ name }}</h1>
+  <h1>{{ name + "__" }}</h1>
 </div>
