--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>app</h1>
+<app-data></app-data>
+<!-- <h1>app</h1>
 
 VVVV
 <hr />
@@ -15,5 +16,5 @@ VVVV
   sint hic odio laudantium id, inventore esse fugit?
 </h1>
 <app-loop></app-loop>
-<app-defer></app-defer>
+<app-defer></app-defer> -->
 <!-- <app-form></app-form> -->
